rerun notebook after debugging diffuser_attn.py

--- a/graph_attn_tute.ipynb
+++ b/graph_attn_tute.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\envs\\diffuser\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "c:\\ProgramData\\Anaconda3\\envs\\diffuser\\lib\\site-packages\\scipy\\__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.4)\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +50,14 @@
      "output_type": "stream",
      "text": [
       "Reusing dataset imdb (C:\\Users\\Kevin Qu\\.cache\\huggingface\\datasets\\imdb\\plain_text\\1.0.0\\2fdd8b9bcadd6e7055e742a706876ba43f19faee861df134affd7a3f60fc38a1)\n",
-      "100%|██████████| 3/3 [00:01<00:00,  2.26it/s]\n",
-      "Parameter 'function'=<function preprocess_function at 0x00000217DC4B38B0> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
-      "100%|██████████| 25/25 [00:54<00:00,  2.17s/ba]\n",
-      "100%|██████████| 25/25 [00:50<00:00,  2.02s/ba]\n",
-      "100%|██████████| 50/50 [01:42<00:00,  2.05s/ba]\n",
-      "100%|██████████| 25000/25000 [00:33<00:00, 749.43ex/s]\n",
-      "100%|██████████| 25000/25000 [00:33<00:00, 749.53ex/s]\n",
-      "100%|██████████| 50000/50000 [01:07<00:00, 744.93ex/s]\n"
+      "100%|██████████| 3/3 [00:01<00:00,  2.96it/s]\n",
+      "Parameter 'function'=<function preprocess_function at 0x000001FD65649700> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
+      "100%|██████████| 25/25 [00:58<00:00,  2.34s/ba]\n",
+      "100%|██████████| 25/25 [00:53<00:00,  2.13s/ba]\n",
+      "100%|██████████| 50/50 [01:43<00:00,  2.07s/ba]\n",
+      "100%|██████████| 25000/25000 [00:33<00:00, 744.35ex/s]\n",
+      "100%|██████████| 25000/25000 [00:34<00:00, 734.67ex/s]\n",
+      "100%|██████████| 50000/50000 [01:07<00:00, 741.21ex/s]\n"
      ]
     }
    ],
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +156,7 @@
        "}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +176,7 @@
        "models.diffuser_utils.DiffuserConfig"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,19 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'bool' object has no attribute 'is_bool'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# sanity check 2\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdiffuser_att\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DiffuserAttention\n\u001b[1;32m----> 3\u001b[0m attention_block \u001b[38;5;241m=\u001b[39m \u001b[43mDiffuserAttention\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mattn_setup\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(attention_block\u001b[38;5;241m.\u001b[39mwith_frac)\n",
-      "File \u001b[1;32my:\\Diffuser\\models\\diffuser_att.py:24\u001b[0m, in \u001b[0;36mDiffuserAttention.__init__\u001b[1;34m(self, config, layer_id, **kwargs)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, config, layer_id\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m     23\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m---> 24\u001b[0m     \u001b[39massert\u001b[39;00m kwargs\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39mwith_frac\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mis_bool(), \u001b[39m\"\u001b[39m\u001b[39mwith_frac must be boolean\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     25\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwith_frac \u001b[39m=\u001b[39m with_frac\n\u001b[0;32m     26\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m with_frac:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'bool' object has no attribute 'is_bool'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +545,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0741583a611329ff0d862c4e3257b72098d14f2aaa6642227e646bbc01db1d81"
+    "hash": "4e4695c66188fd02ec302552241210d035f117e2ec380286f862195f0d03b1d4"
    }
   }
  },
