correct diffusion map embeddings

--- a/nlp-tutorial/plot_results.ipynb
+++ b/nlp-tutorial/plot_results.ipynb
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": null,
    "id": "b64fe0d3",
    "metadata": {},
    "outputs": [
@@ -1430,27 +1430,71 @@
     }
    ],
    "source": [
-    "paths = [\".droot/length_500/attn_graph_results_1.2.npz\", \".droot/length_500/attn_graph_results_2.0.npz\"]\n",
-    "# paths = [\".droot/length_32/attn_graph_results_1.2.npz\", \".droot/length_32/attn_graph_results_2.0.npz\"]\n",
+    "# paths = [\".droot/length_500/attn_graph_results_1.2.npz\", \".droot/length_500/attn_graph_results_2.0.npz\"]\n",
+    "# # paths = [\".droot/length_32/attn_graph_results_1.2.npz\", \".droot/length_32/attn_graph_results_2.0.npz\"]\n",
+    "\n",
+    "# fig, ax = plt.subplots(figsize=(1.5,1.5))\n",
+    "# colors = [\"#2E63A6\", \"#A4292F\"]\n",
+    "# i1, i2 = -1, -2\n",
+    "# for i in range(2):\n",
+    "#     diff_map_results = np.load(paths[i])[\"diffusion_map\"]\n",
+    "#     far_xy_idxs = np.load(paths[i])[\"far_xy_idxs\"]\n",
+    "#     # centre = np.mean(diff_map_results[far_xy_idxs], axis=0)\n",
+    "#     # centred_results = diff_map_results[far_xy_idxs] - centre\n",
+    "#     centred_results = diff_map_results - np.mean(diff_map_results, axis=0)\n",
+    "#     ax.scatter(centred_results[:,i1], centred_results[:,i2], marker='.', c=colors[i], alpha=0.8, s=1, zorder=-i)\n",
+    "# ax.spines['top'].set_visible(False)\n",
+    "# ax.spines['right'].set_visible(False)\n",
+    "# ax.set_xticks([-5e-8, 0, 5e-8])\n",
+    "# ax.set_yticks([-0.05, 0, 0.05])\n",
+    "# ax.set_xlabel(r'DM$_1$')\n",
+    "# ax.set_ylabel(r'DM$_2$')\n",
+    "# from constants import FIGS_DIR\n",
+    "# SAVE_DIR = njoin(FIGS_DIR, 'nlp-task')    \n",
+    "# fig_file = 'diffusion_map'\n",
+    "# fig_file += '.pdf'\n",
+    "# plt.savefig(njoin(SAVE_DIR, fig_file), bbox_inches='tight')\n",
+    "# plt.show()\n",
+    "# print(f\"{len(far_xy_idxs)} of the furthest embeddings in the sequence.\")\n",
+    "\n",
+    "paths = [\".droot/L-d-grid-v2/1L-hidden=8-max_len=512-rescaled/config_qqv/imdb/layers=1-heads=1-qqv/oprdfnsformer-imdb-qqv-alpha=1.2-eps=1.0/model=0/attn_graph_results.npz\", \n",
+    "         \".droot/L-d-grid-v2/1L-hidden=8-max_len=512-rescaled/config_qqv/imdb/layers=1-heads=1-qqv/oprdfnsformer-imdb-qqv-alpha=2.0-eps=1.0/model=0/attn_graph_results.npz\"]\n",
+    "\n",
+    "# paths = paths[:1]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(1.5,1.5))\n",
     "colors = [\"#2E63A6\", \"#A4292F\"]\n",
-    "i1, i2 = -1, -2\n",
-    "for i in range(2):\n",
-    "    diff_map_results = np.load(paths[i])[\"diffusion_map\"]\n",
+    "# i1, i2 = -1, -2\n",
+    "i1, i2 = -2, -3\n",
+    "\n",
+    "for i in range(len(paths)):\n",
+    "    eigvals = np.load(paths[i])[\"eigvals\"]\n",
+    "    eigvecs = np.load(paths[i])[\"diffusion_map\"]\n",
+    "    bdwth = np.load(paths[i])[\"bdwth\"].item()  # for checking bandwidth used\n",
+    "\n",
+    "    # order based on eigvals from large to small\n",
+    "    ii = np.argsort(eigvals)\n",
+    "    eigvals = eigvals[ii]\n",
+    "    eigvecs = eigvecs[:,ii] \n",
+    "\n",
+    "    diff_map_results = eigvals**bdwth * eigvecs\n",
+    "\n",
     "    far_xy_idxs = np.load(paths[i])[\"far_xy_idxs\"]\n",
     "    # centre = np.mean(diff_map_results[far_xy_idxs], axis=0)\n",
     "    # centred_results = diff_map_results[far_xy_idxs] - centre\n",
-    "    centred_results = diff_map_results - np.mean(diff_map_results, axis=0)\n",
+    "    # centred_results = diff_map_results - np.mean(diff_map_results, axis=0)\n",
+    "    centred_results = diff_map_results\n",
     "    ax.scatter(centred_results[:,i1], centred_results[:,i2], marker='.', c=colors[i], alpha=0.8, s=1, zorder=-i)\n",
+    "\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
-    "ax.set_xticks([-5e-8, 0, 5e-8])\n",
-    "ax.set_yticks([-0.05, 0, 0.05])\n",
+    "# ax.set_xticks([-5e-8, 0, 5e-8])\n",
+    "# ax.set_yticks([-0.05, 0, 0.05])\n",
     "ax.set_xlabel(r'DM$_1$')\n",
     "ax.set_ylabel(r'DM$_2$')\n",
     "from constants import FIGS_DIR\n",
-    "SAVE_DIR = njoin(FIGS_DIR, 'nlp-task')    \n",
+    "SAVE_DIR = njoin(FIGS_DIR, 'pretrained-analysis')    \n",
+    "if not isdir(SAVE_DIR): makedirs(SAVE_DIR) \n",
     "fig_file = 'diffusion_map'\n",
     "fig_file += '.pdf'\n",
     "plt.savefig(njoin(SAVE_DIR, fig_file), bbox_inches='tight')\n",
